...
  List<MuscleTarget> selectedMuscleTargets = [];
  List<JointTarget> selectedJointTargets = [];

  @override
  Widget build(BuildContext context) {
    return AlertDialog(
      title: const Text('Create New Exercise'),
      content: SingleChildScrollView(
        child: ListBody(
          children: <Widget>[
            TextField(
              controller: nameController,
              decoration: const InputDecoration(hintText: "Exercise Name"),
...
        TextButton(
          child: const Text('Cancel'),
          onPressed: () => Navigator.of(context).pop(),
        ),
        TextButton(
          onPressed: _createExercise,
          child: const Text('Add'),
        ),
      ],
    );
  }

  Widget _buildTargetSection<T>(
...
